resume metodos e espaços